trying sonarqube